<resources>
    <string name="app_name">MyBookshelf</string>
    <string name="title_activity_text">MyBookshelf</string>

    <string name="enter_app">Go to Bookshelf</string>

    <string name="config_title">Config</string>
    <string name="config_tab">Config</string>
    <string name="database_tab">Database</string>
    <string name="nsfw_head">NSFW</string>
    <string name="themes_head">Themes</string>
    <string name="nsfw_show">Show NSFW content</string>
    <string name="nsfw_censor">Censor NSFW images</string>
    <string name="database_head">Database options</string>
    <string name="delete_database">Delete all books</string>
    <string name="download_database">Download database</string>
    <string name="pink_theme">Pink</string>
    <string name="blue_theme">Blue</string>

    <string name="delete_database_dialog_title">Delete database</string>
    <string name="delete_database_dialog_message">Are you sure you want to delete all entries?</string>

    <string name="download_pdf">Download PDF</string>
    <string name="downloading_pdf">Downloading PDF…</string>
    <string name="pdf_column_number" translatable="false">#</string>
    <string name="pdf_column_score">Score</string>
    <string name="pdf_not_available" translatable="false">N/A</string>
    <string name="pdf_column_volumes">Volumes</string>
    <string name="pdf_column_title">Title</string>
    <string name="pdf_column_desc">Description</string>
    <string name="pdf_column_chapters">Chapters</string>
    <string name="pdf_column_image">Image</string>


    <string name="add_book_title">Add book</string>
    <string name="edit_book_title">Edit book</string>
    <string name="status_header">STATUS</string>
    <string name="score_header">SCORE</string>
    <string name="title_header">TITLE</string>
    <string name="chapters_header">CHAPTER</string>
    <string name="volumes_header">VOLUME</string>
    <string name="nsfw_header">NSFW</string>
    <string name="type_header">TYPE:</string>
    <string name="description_hint">Description (optional)</string>

    <string name="stats_title">Stats</string>
    <string name="stats_average_text">Average score</string>
    <string name="stats_entries_text">Entries</string>
    <string name="stats_chapters_text">Chapters</string>
    <string name="stats_volumes_text">Volumes</string>
    <string name="stats_pages_text">Pages</string>
    <string name="stats_type_category">By Type</string>
    <string name="stats_status_category">By Status</string>

    <string name="search_hint">Type to search</string>
    <string name="no_data_found_text">No data found</string>

    <string name="dialog_delete_title">Confirm deletion</string>
    <string name="dialog_delete_description">Are you sure you want to delete this book?</string>
    <string name="dialog_confirm">Confirm</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>

    <string name="filter_status_title">Filter by status</string>
    <string name="filter_type_title">Filter by type</string>
    <string name="reset_filters_title">Reset filters</string>

</resources>