<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shapedialog"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="@string/filter_type_title"
        android:textColor="?attr/bookFormTextColor"
        android:textSize="20sp"
        android:textStyle="bold" />


    <Spinner
        android:id="@+id/filterTypeSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnFilterTypeNo"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/shapedarker"
            android:clickable="true"
            android:text="@string/dialog_cancel"
            android:textColor="?attr/textColor"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnFilterTypeYes"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:background="@drawable/shapedarker"
            android:clickable="true"
            android:text="@string/dialog_confirm"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>