<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor"
    android:padding="20dp"
    tools:context=".fragments.ConfigFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nsfwTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/nsfw_head"
                android:textColor="?attr/mainTextColor"
                android:textSize="34sp"
                android:textStyle="bold" />

            <Switch
                android:id="@+id/configToggleNSFW"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nsfw_show"
                android:textColor="?attr/textNotImportant"
                android:textSize="20sp" />

            <Switch
                android:id="@+id/configToggleCensor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nsfw_censor"
                android:textColor="?attr/textNotImportant"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/themeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/themes_head"
                android:textColor="?attr/mainTextColor"
                android:textSize="34sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/blue_theme_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="?attr/btnBackground"
                android:text="Blue theme"
                android:textColor="?attr/textColor" />

            <Button
                android:id="@+id/pink_theme_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="?attr/btnBackground"
                android:text="Pink"
                android:textColor="?attr/textColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/saveConfigButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:clickable="true"
        android:src="@drawable/baseline_check_24"
        app:backgroundTint="?attr/btnBackgroundLighter"
        app:fabCustomSize="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>