<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rowStatusScore"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnConfirmAddBook"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:clickable="true"
        app:backgroundTint="?attr/btnBackgroundLighter"
        app:fabCustomSize="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/tick" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarAddBook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/mainColorDark"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:navigationIcon="@drawable/baseline_arrow_back_24"
        app:title="@string/add_book_title"
        app:titleTextColor="?attr/textColor" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="?attr/btnBackgroundLighter"
        android:gravity="center|top"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarAddBook">

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/addBookImage"
                android:layout_width="130dp"
                android:layout_height="match_parent"
                android:background="@drawable/shapedarker"
                android:scaleType="centerCrop" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:divider="@drawable/divider"
                android:gravity="bottom"
                android:orientation="vertical"
                android:showDividers="middle">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/status_header"
                    android:textAlignment="center"
                    android:textSize="16sp" />

                <Spinner
                    android:id="@+id/spinnerAddStatus"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:background="@drawable/shapedarker"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/score_header"
                    android:textAlignment="center"
                    android:textSize="16sp" />

                <Spinner
                    android:id="@+id/spinnerAddScore"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:background="@drawable/shapedarker"
                    android:textAlignment="center" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/shapeform"
                android:orientation="vertical"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/shapelighter"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_span="2"
                        android:text="@string/title_header"
                        android:textAlignment="viewStart"
                        android:textColor="?attr/bookFormTextColor"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/textFieldAddTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/shapelighter"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/chapters_header"
                            android:textColor="?attr/bookFormTextColor"
                            android:textSize="16sp" />

                        <EditText
                            android:id="@+id/numberFieldAddChapters"
                            android:layout_width="165dp"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:inputType="number"
                            android:textSize="20sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/volumes_header"
                            android:textColor="?attr/bookFormTextColor"
                            android:textSize="16sp" />

                        <EditText
                            android:id="@+id/numberFieldAddVolumes"
                            android:layout_width="165dp"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:inputType="number"
                            android:textSize="20sp" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/shapelighter"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <Switch
                        android:id="@+id/switchAddNSFW"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_marginRight="25dp"
                        android:layout_weight="1"
                        android:text="@string/nsfw_header"
                        android:textAlignment="center"
                        android:textColor="?attr/bookFormTextColor"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                    <TextView
                        android:id="@+id/textViewSpinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/type_header"
                        android:textAlignment="center"
                        android:textColor="?attr/bookFormTextColor"
                        android:textSize="16sp" />

                    <Spinner
                        android:id="@+id/spinnerAddType"
                        android:layout_width="112dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/shapelighter"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textFieldAddDescription"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="0dp"
                        android:hint="@string/description_hint" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>